Spacing fixes, font fixes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ p {
 footer {
   flex: 1;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 50px;
   background-color: black;
   border: 5px solid azure;
 }
@@ -25,7 +25,7 @@ footer {
   font-family: 'Fredericka the Great', cursive;
   color: bisque;
   text-decoration: underline;
-  margin-top: 70px;
+  margin-top: 25px;
 }
 
 #description {
@@ -35,7 +35,7 @@ footer {
 }
 
 #carnivores {
-  margin-top: 120px;
+  margin-top: 70px;
   position: relative;
   bottom: 30px;
 }
